--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -14,7 +14,7 @@
     <link href="{{ site.BASE_PATH }}/assets/resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ site.BASE_PATH }}/assets/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="{{ site.BASE_PATH }}/assets/resources/syntax/syntax.css" rel="stylesheet">
-    <link href="{{ site.BASE_PATH }}/assets/css/style.css" rel="stylesheet">
+    <link href="{{ site.BASE_PATH }}/assets/css/mystyle.css" rel="stylesheet">
 </head>
 
 <body>
