--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -29,7 +29,7 @@
     <img src="{{ site.BASE_PATH }}/img/favicon.png" width = "80px" style="opacity: 0.8;">
     </br>
     <div><span id="down" class="a" style="font-size: large;"><b>ABOUT</b></span> |  
-        <span id="down" class="f" style="font-size: large;"><b>FEATURES</b></span></div>
+        <span id="down" class="f" style="font-size: large;"><b>PROJECTS</b></span></div>
 </div>
 
 <div id ="about">
