--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,50 +1,4 @@
-<nav class="navbar navbar-default visible-xs" role="navigation">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        {% if site.author.github %}
-        <a type="button" class="navbar-toggle nav-link" href="http://github.com/{{ site.author.github }}">
-            <i class="fa fa-github"></i>
-        </a>
-        {% endif %}
-        {% if site.author.twitter %}
-        <a type="button" class="navbar-toggle nav-link" href="http://twitter.com/{{ site.author.twitter }}">
-            <i class="fa fa-twitter"></i>
-        </a>
-        {% endif %}
-        {% if site.author.linkedin %}
-        <a type="button" class="navbar-toggle nav-link" href="http://linkedin.com/in/{{ site.author.linkedin }}">
-            <i class="fa fa-linkedin"></i>
-        </a>
-        {% endif %}
-        {% if site.author.email %}
-        <a type="button" class="navbar-toggle nav-link" href="mailto:{{ site.author.email }}">
-            <i class="fa fa-envelope"></i>
-        </a>
-        {% endif %}
-        <a class="navbar-brand" href="{{ site.BASE_PATH }}/">
-            {{ site.title }}
-        </a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="{{ site.BASE_PATH }}/">Home</a></li>
-            <li><a href="{{ site.BASE_PATH}}/index.html#about">About</a></li>
-            <li><a href="{{ site.BASE_PATH}}/{{ site.posts_path }}">Blog</a></li>
-            <li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}">Tags</a></li>
-        </ul>
-    </div><!-- /.navbar-collapse -->
-</nav>
-
-<!-- nav-menu-dropdown -->
-<div class="btn-group hidden-xs" id="nav-menu">
+<div class="btn-group" id="nav-menu">
     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
         <i class="fa fa-bars"></i>
     </button>
