Change stylesheet using sass

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,8 +2,8 @@
 <div class="row" id="about-title"><h1><span class="landing-title">About</span></h1></div>
 
 <div class="row" id="about-content">
-<div class="col-sm-3 hidden-xs" style = "text-align: center;">
-    <img src="https://github.com/{{site.author.github}}.png" class="img-circle" width="90%">
+<div class="col-sm-3 hidden-xs" style = "text-align: center; padding-top: 2.5%">
+    <img src="https://github.com/{{site.author.github}}.png" class="img-circle">
 </div>
 <div class="col-sm-9 col-xs-12">
 <b>Paperstone</b> is the name of the first ever R package I created, which allows users to play a game of Scissors-Paper-Stone against R. My blog is named after it as a tribute to how this quintessential game is often used as an intro assignment to students in any Programming 101 class.<br><br>
@@ -11,10 +11,6 @@ I'm currently a student in Quantitative Methods, and I hope to share my learning
 To view all posts, view my <a href="{{ site.BASE_PATH }}/{{ site.posts_path }}"><b>blog</b></a>; to search posts by type of analysis, click on <a href="{{ site.BASE_PATH }}/{{ site.categories_path }}"><b>Categories</b></a> on the navigation bar, and to search by language or methods, use <a href="{{ site.BASE_PATH }}/{{ site.tags_path }}"><b>Tags</b></a> <br><br>
 At the end of every post, there is also a link to the relevant Github repo. Please do contact me for any questions/collaborations! I'm always keen to learn more.
 </div>
-</div>
-
-<div class="row" id="about-footer">
-    <span id="down" style="font-size: 30px;" onclick="scrollFeatures()"><b>&darr;</b></span>
 </div>
 
 </div>
