Add particles and fonts sass

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,8 +7,8 @@
 </div>
 <div class="col-sm-9 col-xs-12">
 <b>Paperstone</b> is the name of the first ever R package I created, which allows users to play a game of Scissors-Paper-Stone against R. My blog is named after it as a tribute to how this quintessential game is often used as an intro assignment to students in any Programming 101 class.<br><br>
-I'm currently a student in Quantitative Methods, and I hope to share my learnings and love for data science (esp. for social good!) through this blog. Here, I'll document my hobby coding + data analytics projects, mainly focusing on using data science to better understand social and spatial issues. I'm particularly interested in <b>spatial data science, data engineering and text mining</b> and hope one day to use these tools to create social impact!<br><br>
-To view all posts, view my <a href="{{ site.BASE_PATH }}/{{ site.posts_path }}"><b>blog</b></a>; to search posts by type of analysis, click on <a href="{{ site.BASE_PATH }}/{{ site.categories_path }}"><b>Categories</b></a> on the navigation bar, and to search by language or methods, use <a href="{{ site.BASE_PATH }}/{{ site.tags_path }}"><b>Tags</b></a> <br><br>
+I'm currently a student in Quantitative Methods, and I hope to share my learnings and love for data science (esp. for social good!) through this blog. Here, I'll document my hobby coding + data analytics projects, mainly focusing on using data science to better understand social and spatial issues. I'm particularly interested in <b>data visualization, spatial data science and web design</b> and hope one day to use these tools to create social impact!<br><br>
+To view all posts, view my <a href="{{ site.BASE_PATH }}/{{ site.posts_path }}">Blog</a>, and to search posts by topics, use <a href="{{ site.BASE_PATH }}/{{ site.tags_path }}">Tags</a>. <br><br>
 At the end of every post, there is also a link to the relevant Github repo. Please do contact me for any questions/collaborations! I'm always keen to learn more.
 </div>
 </div>
