--- a/_includes/default.html
+++ b/_includes/default.html
@@ -25,7 +25,7 @@
 <body>
 	{% include navbar.html %}
 
-	<div class="col-sm-3 sidebar hidden-xs" style="{% if site.sidebar_background_image %}background: url({{ site.BASE_PATH }}/{{site.sidebar_background_image}}) no-repeat !important;{% endif %}">
+	<div class="col-sm-3 sidebar hidden-xs">
 		{% include sidebar.html %}
 	</div>
 
