--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -19,9 +19,10 @@
 
 <body>
     <script type="text/javascript" src="{{ site.BASE_PATH }}/assets/resources/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="{{ site.BASE_PATH }}/assets/resources/popper/popper.min.js"></script>
 	<script type="text/javascript" src="{{ site.BASE_PATH }}/assets/resources/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{ site.BASE_PATH }}/assets/resources/particles/particles.min.js"></script>
     <script type="text/javascript" src="{{ site.BASE_PATH }}/assets/js/scroll.js"></script>
-    <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script type="text/javascript" src="{{ site.BASE_PATH }}/assets/js/app.js"></script>
         
 {% include navbar.html %}
