--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
 <div class="row" id="about-title"><h1><span class="landing-title">About</span></h1></div>
 
 <div class="row" id="about-content">
-<div class="col-sm-3 hidden-xs" style = "text-align: center; padding-top: 2.5%">
+<div class="col-3 d-none d-sm-block">
     <img src="https://github.com/{{site.author.github}}.png" class="img-circle">
 </div>
 <div class="col-sm-9 col-xs-12">
