--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,11 +1,9 @@
 <div class="page-header">
   <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
 </div>
-	
-<article class = "posts">
 
-	<div class="col-sm-10">
-	 <span class="post-date">
+<article class = "posts">
+	<span class="post-date">
 	   {% assign d = page.date | date: "%d" | plus:'0' %}
 	   {{ page.date | date: "%B" }} 
 	   {% case d %}
@@ -15,25 +13,26 @@
 	     {% else %}{{ d }}th,
 	   {% endcase %}
 	   {{ page.date | date: "%Y" }}
-	 </span>
-	  <div class="article_body">
+	</span>
+	<div class="article_body">
 	  {{ content }}
-	  </div>
+	</div>
 
+	<div class="article_tags">
 		{% unless page.categories == empty %}
 		<ul class="tag_box list-unstyled list-inline">
-		  <li><i class="fa fa-folder-open"></i></li>
+		  <li class="list-inline-item"><i class="fa fa-folder-open"></i></li>
 		  {% assign categories_list = page.categories %}
 		  {% if categories_list.first[0] == null %}
 			{% for category in categories_list %} 
-				<li><a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category }}-ref">
+				<li class="list-inline-item"><a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category }}-ref">
 					{{ category | join: "/" }} <span>({{ site.categories[category].size }})</span>
 					{% unless forloop.last %},{% endunless %}
 				</a></li>
 			{% endfor %}
 		  {% else %}
 			{% for category in categories_list %} 
-				<li><a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category[0] }}-ref">
+				<li class="list-inline-item"><a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category[0] }}-ref">
 					{{ category[0] | join: "/" }} <span>/{{ category[1].size }})</span>
 				</a></li>
 			{% endfor %}
@@ -43,11 +42,11 @@
 
 		{% unless page.tags == empty %}
 		<ul class="list-inline">
-		  <li><i class="fa fa-tags"></i></li>
+		  <li class="list-inline-item"><i class="fa fa-tags"></i></li>
 		  {% assign tags_list = page.tags %}
 		  {% if tags_list.first[0] == null %}
 			{% for tag in tags_list %} 
-				<li>
+				<li class="list-inline-item">
 					<a href="{{ site.BASE_PATH }}/{{ site.tags_path }}#{{ tag }}-ref">
 					{{ tag }} <span>({{ site.tags[tag].size }})</span>
 					{% unless forloop.last %},{% endunless %}
@@ -56,7 +55,7 @@
 			{% endfor %}
 		  {% else %}
 			{% for tag in tags_list %} 
-				<li>
+				<li class="list-inline-item">
 					<a href="{{ site.BASE_PATH }}/{{ site.tags_path }}#{{ tag[0] }}-ref">
 						{{ tag[0] }} <span>({{ tag[1].size }})</span>
 						{% unless forloop.last %},{% endunless %}
@@ -68,32 +67,24 @@
 		  {% assign tags_list = nil %}
 		</ul>
 		{% endunless %}  
-
-		<hr>
-
-		<div>
-    </div>
-
-    <div class="clearfix"></div>
-
-		<ul class="pager">
-		  {% if page.previous %}
-		  <li class="previous"><a href="{{ site.BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
-		  {% else %}
-		  <li class="previous disabled"><a>&larr; Previous</a></li>
-		  {% endif %}
-		  {% if page.next %}
-		  <li class="next"><a href="{{ site.BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
-		  {% else %}
-			<li class="next disabled"><a>Next &rarr;</a>
-		  {% endif %}
-		</ul>
-
-		<hr>
 	</div>
 	
-	<div class="col-sm-2 sidebar-2">
-	
+	<hr>
+
+	<div class="article_btns">
+	<ul class="pagination justify-content-between">
+		{% if page.previous %}
+		<li class="page-item pager-button btn pagebtn"><a href="{{ site.BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Previous</a></li>
+		{% else %}
+		<li class="page-item pager-button btn pagebtn disabled"><a>&larr; Previous</a></li>
+		{% endif %}
+		{% if page.next %}
+		<li class="page-item pager-button btn pagebtn"><a href="{{ site.BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Next &rarr;</a></li>
+		{% else %}
+		<li class="page-item pager-button btn pagebtn disabled"><a>Next &rarr;</a>
+		{% endif %}
+		</li>
+	</ul>
 	</div>
+
 </article>
-<div class="clearfix"></div>
